# nd45_dtsu666_converter

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
DTSU_scans/: scan_COM8_20260723_122204.txt  scan_COM8_20260723_165049.txt  scan_COM8_20260723_171145.txt  scan_COM8_20260723_172932.txt  scan_COM8_20260723_175850.txt  scan_COM8_20260723_185011.txt  scan_COM8_20260723_212641.txt  scan_COM8_20260723_222502.txt  scan_COM8_20260724_212812.txt
config/: config.json  config_debug_export.json  config_debug_large.json  config_debug_simple.json  config_debug_test_pattern.json  config_debug_unity.json  config_debug_zeros.json  registers.json
docs/: instrukcja_instalatora.html  instrukcja_instalatora_skrocona.docx  register-map.md
docs/superpowers/plans/: 2026-07-04-nd45-dtsu666-translator.md  2026-07-06-dtsu-tcp-transport.md  2026-07-06-systemd-watchdog.md  (+7 more)
real_logs/: log_2026-07-23_12-35-18.log.txt  log_2026-07-23_12-38-04.log.txt  log_2026-07-23_12-51-26.log.txt  log_2026-07-23_12-59-12.log.txt
scripts/: full_scan_dtsu666.py  poll_physical_dtsu666.py  query_bridge_tcp.py
src/nd45_dtsu666/: __init__.py  __main__.py  app.py  canonical.py  codec.py  config.py  diagnostics.py  dtsu_server.py  monitor.py  nd45_poller.py  rtudebug.py  static_debug.py  watchdog.py
systemd/: nd45-dtsu666.service
tests/: test_app.py  test_canonical.py  test_codec.py  test_config.py  test_diagnostics.py  test_main.py  test_monitor.py  test_poller.py  test_rtudebug.py  test_server.py  test_smoke.py  test_static_debug.py  test_watchdog.py
(+12 files in other folders)
