[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nd45_dtsu666"
version = "0.2.0"
description = "Modbus bridge: Lumel ND45 (TCP) -> DTSU666 (RTU or TCP, config-selectable) for Sigenergy"
requires-python = ">=3.10"
dependencies = [
    "pymodbus>=3.6,<3.7",
    "pydantic>=2,<3",
    "pyserial>=3.5",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.6"]

[project.scripts]
nd45-dtsu666 = "nd45_dtsu666.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
